# swc-ast-viewer

./: .editorconfig  .gitignore  Cargo.toml  bun.lockb  dprint.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  rust-toolchain.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml  test.yml
crates/swc_ast_viewer/: Cargo.toml
crates/swc_ast_viewer/extra/: swc_ast_viewer_node.js  viewer.js
crates/swc_ast_viewer/scripts/: package.mjs  postbuild.sh
crates/swc_ast_viewer/src/: lib.rs
patches/: @monaco-editor__react@4.5.2.patch  @monaco-editor__react@4.6.0.patch  @wasm-fmt__biome_fmt@0.1.1.patch  lz-string@1.5.0.patch
scripts/: vercel_build.sh  vercel_install.sh
src/: App.css  App.tsx  Init.tsx  Input.tsx  Output.tsx  config.ts  env.d.ts  index.tsx  main.tsx  monarch.ts  share.ts  swc-ast-parser.ts
src/monaco/: action.ts  fmt.ts  github_dark.json  monarch.ts  swc-ast.ts  theme.ts  typescript.ts
