[workspace]
members  = ["crates/*"]
resolver = "2"


    [workspace.package]
    authors     = ["magic-akari <akari.ccino@gmail.com>"]
    description = "SWC AST Viewer"
    edition     = "2021"
    homepage    = "https://github.com/magic-akari/swc-ast-viewer"
    keywords    = []
    license     = "MIT"
    readme      = "README.md"
    repository  = "https://github.com/magic-akari/swc-ast-viewer"
    version     = "0.0.0"


    [workspace.dependencies]
    swc_core            = { version = "0.86.101", default-features = false }
    swc_error_reporters = "0.17.12"


[profile.release]
lto       = true
opt-level = "s"
