[workspace]
members  = ["crates/*"]
resolver = "2"


    [workspace.package]
    authors     = ["magic-akari <akari.ccino@gmail.com>"]
    description = "SWC AST Viewer"
    edition     = "2021"
    homepage    = "https://github.com/magic-akari/swc-ast-viewer"
    keywords    = []
    license     = "MIT"
    readme      = "README.md"
    repository  = "https://github.com/magic-akari/swc-ast-viewer"
    version     = "0.0.0"


    [workspace.dependencies]
    swc_core            = { version = "0.104.1", default-features = false }
    swc_error_reporters = "0.22.0"


[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
