[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_ast_viewer"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = "1.0.86"
serde              = "1.0.202"
serde-wasm-bindgen = "0.6.5"
serde_json         = "1.0.117"
wasm-bindgen       = "0.2.92"

    [dependencies.swc_core]
    features = [
        "ecma_ast",
        "ecma_parser",
        "common",
        "ecma_visit",
        "ecma_transforms",

    ]
    workspace = true

    [dependencies.swc_error_reporters]
    workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
