[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_ast_viewer"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = [
        "-Os",
        "--enable-bulk-memory",
        "--enable-nontrapping-float-to-int",
    ]

[dependencies]
anyhow       = "1.0.102"
wasm-bindgen = "0.2.118"

    [dependencies.swc_core]
    features = [
        "ecma_ast",
        "common",
        "ecma_visit",
        "ecma_transforms",
        "ecma_parser_unstable",
    ]
    workspace = true

    [dependencies.swc_error_reporters]
    workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
